generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model ImageCategory {
  id     String  @id @default(uuid())
  name   String
  slug   String  @unique
  images Image[]
}

model Image {
  id          String   @id @default(uuid())
  title       String
  alt         String   @default("")
  publicId    String
  version     Int
  format      String
  width       Int
  height      Int
  bytes       Int      @default(0)
  blurDataUrl String   @default("")
  order       Int      @default(0)

  category    ImageCategory @relation(fields: [categoryId], references: [id])
  categoryId  String

  actualites  Actualite[]
  disciplines Discipline[]

  coachOf     Discipline[] @relation("CoachImage")

  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Discipline {
  id          String   @id @default(uuid())
  title       String
  coach       String
  category    String
  citation    String?  @db.Text
  description String   @db.Text
  tags        String[]
  active      Boolean  @default(true)

  images       Image[]
  imageOrder   String[]
  coachImage   Image?   @relation("CoachImage", fields: [coachImageId], references: [id])
  coachImageId String?

  seo       Json
  order     Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Actualite {
  id          String    @id @default(uuid())
  title       String
  description String    @db.Text
  tags        String[]
  active      Boolean   @default(true)
  featured    Boolean   @default(false)

  images      Image[]
  imageOrder  String[]

  seo         Json
  order       Int       @default(0)
  publishedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
}

// ─── Enums adhesion ──────────────────────────────────────────────────────────

enum StatutDocument {
  non_fourni
  declare
  valide
}

enum TypePaiement {
  sur_place
  en_ligne
}

enum StatutInscription {
  ESSAYANT
  ACTIF
  BLOQUE
  ARCHIVE
}

enum Categorie {
  enfant
  ados
  adulte
}

// ─── Commune ──────────────────────────────────────────────────────────────────

model Commune {
  codeInsee String   @id @db.VarChar(5)
  nom       String   @db.VarChar(100)
  membres   Membre[]
}

// ─── Membre (identité uniquement) ────────────────────────────────────────────

model Membre {
  id                 String   @id @default(uuid())
  nom                String   @db.VarChar(100)
  prenom             String   @db.VarChar(100)
  email              String   @unique @db.VarChar(150)
  telephone          String?  @db.VarChar(20)
  sexe               String?  @db.VarChar(10)
  codePostal         String?  @db.VarChar(5)
  adresse            String?  @db.Text
  codeInsee          String?  @db.VarChar(5)
  commune            Commune? @relation(fields: [codeInsee], references: [codeInsee])
  dateDeNaissance    DateTime @db.Date
  numeroAdherent     String?  @unique @db.VarChar(10)
  accesToken         String?  @db.VarChar(255)
  accesTokenExpireLe DateTime?
  dateCreation       DateTime @default(now())

  inscriptions       Inscription[]
}

// ─── Inscription (adhésion par saison) ───────────────────────────────────────

model Inscription {
  id                         Int               @id @default(autoincrement())
  statut                     StatutInscription @default(ESSAYANT)
  photo                      String?           @db.VarChar(255)
  certificatMedical          StatutDocument    @default(non_fourni)
  certificatMedicalReq       Boolean           @default(false)
  engagementPrisConnaissance Boolean           @default(false)
  autorisationParentale      StatutDocument    @default(non_fourni)
  autorisationSortieSeul     Boolean?
  couponSport                StatutDocument    @default(non_fourni)
  bonCaf                     StatutDocument    @default(non_fourni)
  codePassSport              String?           @db.VarChar(100)
  montantSnapshot            Decimal?          @db.Decimal(8, 2)
  inscriptionValide          Boolean           @default(false)
  fnsmr                      Boolean           @default(false)
  droitImage                 Boolean           @default(false)
  reglementSigne             StatutDocument    @default(non_fourni)
  oxygene                    Boolean           @default(false)
  renouvellement             Boolean           @default(false)
  typePaiement               TypePaiement?
  accesBloque                Boolean           @default(false)
  telephone2                 String?           @db.VarChar(20)
  stripeSessionId            String?           @db.VarChar(255)
  categorie                  Categorie?
  nombrePresences            Int               @default(0)
  dateInscription            DateTime?
  saison                     String            @db.VarChar(100)

  membreId                   String
  membre                     Membre            @relation(fields: [membreId], references: [id], onDelete: Cascade)

  presences                  PresenceEssai[]
  documents                  Document[]
  questionnaire              QuestionnaireSante?

  @@unique([membreId, saison])
}

// ─── Présences essai ──────────────────────────────────────────────────────────

model PresenceEssai {
  id            Int         @id @default(autoincrement())
  pointeLe      DateTime    @default(now())
  pointePar     String      @db.VarChar(100)

  inscriptionId Int
  inscription   Inscription @relation(fields: [inscriptionId], references: [id], onDelete: Cascade)
}

// ─── Documents adhérent ───────────────────────────────────────────────────────

model Document {
  id            String      @id @default(uuid())
  type          String      @db.VarChar(50)
  name          String?     @db.VarChar(255)
  url           String      @db.Text
  createdAt     DateTime    @default(now())

  inscriptionId Int
  inscription   Inscription @relation(fields: [inscriptionId], references: [id], onDelete: Cascade)
}

// ─── Questionnaire santé (normalisé) ─────────────────────────────────────────

model QuestionnaireSante {
  id            Int         @id @default(autoincrement())
  type          String      @db.VarChar(10)  // 'majeur' | 'mineur'
  createdAt     DateTime    @default(now())

  consentementSanteLe      DateTime?
  consentementSanteVersion String?  @db.VarChar(20)

  inscriptionId Int         @unique
  inscription   Inscription @relation(fields: [inscriptionId], references: [id], onDelete: Cascade)

  reponses      Reponse[]
  interroges    Interroge[]
}

model Question {
  id        Int     @id @default(autoincrement())
  label     String  @unique @db.VarChar(255)
  type      String  @db.VarChar(10)   // 'majeur' | 'mineur'
  ordre     Int
  section   String? @db.VarChar(100)  // uniquement pour 'mineur'

  reponses   Reponse[]
  interroges Interroge[]
}

model Reponse {
  id                   Int                @id @default(autoincrement())
  reponse              Boolean?

  questionnaireSanteId Int
  questionnaireSante   QuestionnaireSante @relation(fields: [questionnaireSanteId], references: [id], onDelete: Cascade)

  questionId           Int
  question             Question           @relation(fields: [questionId], references: [id])

  @@unique([questionnaireSanteId, questionId])
}

model Interroge {
  questionnaireSanteId Int
  questionnaireSante   QuestionnaireSante @relation(fields: [questionnaireSanteId], references: [id], onDelete: Cascade)

  questionId           Int
  question             Question           @relation(fields: [questionId], references: [id])

  @@id([questionnaireSanteId, questionId])
}

// ─── Config ───────────────────────────────────────────────────────────────────

model ConfigTarifs {
  id                   Int      @id @default(autoincrement())
  saison               String   @db.VarChar(50)
  tarifEnfant          Decimal  @db.Decimal(8, 2)
  tarifAdos            Decimal  @db.Decimal(8, 2)
  tarifAdulte          Decimal  @db.Decimal(8, 2)
  supplementOxygene    Decimal  @db.Decimal(8, 2) @default(45.00)
  deductionCouponSport Decimal  @db.Decimal(8, 2) @default(50.00)
  modifieLe            DateTime @default(now())
  modifiePar           String?
}

model CoachToken {
  id       Int      @id @default(autoincrement())
  token    String   @unique @db.VarChar(255)
  expireLe DateTime
  creeLe   DateTime @default(now())
  creePar  String?
}

model ReglementInterieur {
  id         Int      @id @default(autoincrement())
  contenu    String   @db.Text
  modifieLe  DateTime @default(now()) @updatedAt
  modifiePar String?
}
