classDiagram
  namespace AdhesionDomain {
    class IMembreRepository {
      <<interface>>
      +findById(id) Membre
      +findByEmail(email) Membre
      +findByToken(token) Membre "lookup par hash"
      +findByEmailAndNumero(email, numero) Membre
      +findAllWithInscription() Membre[]
      +create(data) Membre
      +updateToken(id, token, exp) void
      +updateAdresse(id, data) void
      +generateUniqueNumero() string
    }

    class IInscriptionRepository {
      <<interface>>
      +findById(id) InscriptionAvecDetails
      +findCurrentByMembreId(membreId) Inscription
      +findByToken(token) InscriptionAvecDetails
      +findByStripeSessionId(sessionId) InscriptionAvecMembre
      +findAllAdherents() InscriptionAvecMembre[]
      +findAllEssayants() InscriptionAvecMembre[]
      +create(data) Inscription
      +update(id, data) Inscription
      +createPresence(inscriptionId, pointePar) PresenceEssai
      +createDocument(inscriptionId, type, url, name) Document
      +upsertQuestionnaire(inscriptionId, type, reponses) void
      +getCurrentSaison() string
    }

    class Membre {
      <<model>>
      +string id (UUID)
      +string nom
      +string prenom
      +string email
      +string telephone?
      +string codeInsee? (FK → Commune)
      +string codePostal?
      +string adresse?
      +DateTime dateDeNaissance
      +string numeroAdherent?
      +string accesToken? "haché SHA-256"
      +DateTime accesTokenExpireLe?
    }

    class Inscription {
      <<model>>
      +int id
      +StatutInscription statut
      +string saison
      +string membreId (FK)
      +boolean inscriptionValide
      +boolean accesBloque
      +boolean autorisationSortieSeul? "null/true/false"
      +int nombrePresences
      +TypePaiement typePaiement?
      +string stripeSessionId?
    }
  }

  namespace AdherentsFeature {
    class AdherentsUseCases {
      +createAdherentUseCase(input)
      +getMonDossierUseCase(token)
      +soumettreQuestionnaireUseCase(token, data)
      +signerReglementUseCase(token)
      +setTypePaiementUseCase(token, type)
      +patchAutorisationSortieUseCase(token, autorise)
      +updateAdresseUseCase(membreId, data)
      +updateTelephoneUseCase(token, data)
      +updateDroitImageUseCase(token, droitImage)
      +validerEngagementUseCase(token)
      +uploadDocumentAdherentUseCase(token, file, type)
      +createCheckoutUseCase(token)
      +getAdherentsUseCase()
      +getAdherentByIdUseCase(id)
      +patchAdherentUseCase(id, data)
      +validerDocumentUseCase(inscriptionId, type)
      +notifierRejetDossierUseCase(id)
    }
  }

  namespace EssayantsFeature {
    class EssayantsUseCases {
      +createEssayantUseCase(input)
      +requestAccesEssaiUseCase(input)
      +getMonEssaiUseCase(token)
      +pointerPresenceUseCase(inscriptionId, coachToken, nomCoach)
      +getEssayantConversionDataUseCase(token)
      +getEssayantsForCoachUseCase(coachToken)
    }
  }

  Membre "1" --> "many" Inscription : a
  AdherentsUseCases --> IMembreRepository : uses
  AdherentsUseCases --> IInscriptionRepository : uses
  EssayantsUseCases --> IMembreRepository : uses
  EssayantsUseCases --> IInscriptionRepository : uses
  IMembreRepository ..> Membre : returns
  IInscriptionRepository ..> Inscription : returns
